Initial commit: UI UX sebleum refactor

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,6 @@
-﻿@tailwind base;
+﻿/* resources\css\app.css */
+
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
 /* Progress ring animation */
